@@ -14,6 +14,11 @@ TOOLS_DIR=`echo ${0} | sed 's%/[^/][^/]*$%%'`
   m=`cut -d/ -f2 < date-stamp`
   d=`cut -d/ -f3 < date-stamp`
   y1=`expr ${y} - 2000`
+  if test -f SVN-REVISION ; then
+    svn_rev=`sed 's/^Revision: //' < SVN-REVISION`
+  else
+    svn_rev=unknown
+  fi
   echo "/* Rversion.h.  Generated automatically. */"
   echo "#ifndef R_VERSION_H"
   echo "#define R_VERSION_H"
@@ -31,6 +36,7 @@ TOOLS_DIR=`echo ${0} | sed 's%/[^/][^/]*$%%'`
   echo "#define R_MONTH  \"${m}\""
   echo "#define R_DAY    \"${d}\""
 ## Using 1-digit year stops problems with leading zeros
+  echo "#define R_SVN_REVISION \"${svn_rev}\""
   echo "#define R_FILEVERSION    ${maj},${pl}${sl},${y1}${m}${d},0"
   echo
   echo '#ifdef __cplusplus'
